<?xml version="1.0"?>
<package format="2">
  <name>workcell4_demos</name>
  <version>0.1.0</version>
  <description>The workcell4_demos package</description>

  <maintainer email="Jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hybrid_planning_common</depend>

</package>
